--- a/src/components/AlumniTab.css
+++ b/src/components/AlumniTab.css
@@ -6,26 +6,44 @@
 .alumnitab{
     margin: 20px 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    /* min-height: 300px; */
+    min-height: calc(100vh - 90px);
+    height: calc(100vh - 90px);
     /* height: 300px; */
     /* flex-direction: column; */
 }
 .alumniimage{
-    min-width: 400px;
+    /* min-width: 400px; */
     width: 40%;
-    height: 300px;
+    height: 80%;
     margin: 5px;
-    border-radius: 20px;
-    box-shadow: 2px 2px 10px lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .alumnidesc{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     min-width: 400px;
     margin: 5px;
-    width: 57%;
+    width: 49%;
 }
 .alumnirev{
     flex-direction: row-reverse;
+}
+
+.alumniimage img{
+    width: 80%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px lightgray;
+}
+@media screen and (max-width:871px) {
+    .alumnitab{
+        height: auto;
+    }
 }
