--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -30,8 +30,13 @@
     align-items: center;
     padding: 1rem;
 }
-.h-wrapper img{
+.h-wrap-img{
     margin: 0 1rem;
+}
+.h-wrap-cont{
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 .header-bg{
     background-color: #111111;
