--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -7,7 +7,7 @@
 }
 .hr-container{
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -22,7 +22,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    min-height: 90vh;
+    max-height: 90vh;
 }
 .img-container{
     height: 300px;
@@ -33,7 +33,7 @@
     position: relative;
 }
 
-.img-container img{
+/* .img-container img{
     z-index: 1;
     position: absolute;
     top: 0;
@@ -48,10 +48,41 @@
     -webkit-user-select: none;
     -o-user-select: none;
     user-select: none;
+} */
+.mainlogotilt{
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* animation: updown 2s infinite ease-in-out alternate; */
+    transform-style: preserve-3d;
+    /* -moz-user-select: none; */
+    /* -khtml-user-select: none; */
+    /* -webkit-user-select: none; */
+    /* -o-user-select: none; */
+    /* user-select: none; */
+    border: 3px solid white;
+    height: 300px;
+    background: url('https://roboticsclubnitw.github.io/images/Robotics%20Club,%20NITW.png');
+    background-size: cover;
+    border-radius:50%;
+}
+.logotilt{
+    width: 50%;
+    height: 50%;
+    /* background-color: darkgreen; */
+    transform: translateZ(60px);
 }
 .hr-title h1{
     font-size: 3rem;
-    font-family: 'Robotics','Poppins',sans-serif;
+    font-family: 'Batman','Robotics','Poppins',sans-serif;
     letter-spacing: 4px;
 }
 
@@ -77,6 +108,13 @@
     }
     .hr-left,.hr-right{
         width: 100%;
-        height: 80vh;
+        /* height: 60vh; */
+    }
+    .hr-left{
+        margin-top: 100px;
+    }
+    .hr-container{
+        justify-content: center;
+        /* margin-top: 20vh; */
     }
 }
