--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo&display=swap');
 :root {
   --primary: #1f3e72;
   --secondary: rgba(255, 255, 255, 0.78);
@@ -15,6 +16,12 @@
   /*Can be any text*/
   src: url("../fonts/destructobeambb_reg.ttf") format("truetype");
 }
+@font-face {
+  font-family: "Batman";
+  /*Can be any text*/
+  src: url("../fonts/batmfa__.ttf") format("truetype");
+}
+
 
 ::-webkit-scrollbar-thumb {
   background: grey;
@@ -32,7 +39,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Exo","Poppins", sans-serif;
   scroll-behavior: smooth;
 }
 a {
